--- a/code.ipynb
+++ b/code.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0b6d2661",
+   "metadata": {},
+   "source": [
+    "Single Linked List"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a7aff2cc",
+   "execution_count": 20,
+   "id": "1938834c",
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +19,7 @@
      "output_type": "stream",
      "text": [
       "My Linked List:\n",
-      "5->10->20->30->None\n"
+      "5->10->20->50->30->None\n"
      ]
     }
    ],
@@ -43,6 +51,33 @@
     "        n_node.next=self.head\n",
     "        self.head=n_node\n",
     "\n",
+    "\n",
+    "    def middle(self, data):\n",
+    "       current = self.head\n",
+    "\n",
+    "       while current and current.data != 20:\n",
+    "         current = current.next\n",
+    "       if current is None:\n",
+    "         print(\"20 not found\")\n",
+    "         return\n",
+    "\n",
+    "       n_node = Node(data)\n",
+    "       n_node.next = current.next\n",
+    "       current.next = n_node  \n",
+    "\n",
+    "    def delete(self,data):\n",
+    "        current = self.head\n",
+    "\n",
+    "        while current and current.next and current.next.data != data:\n",
+    "            current=current.next\n",
+    "\n",
+    "        if current.next is None:\n",
+    "         print(\"Value not found\")\n",
+    "         return\n",
+    "    \n",
+    "        current.next = current.next.next\n",
+    "        \n",
+    "\n",
     "    def display(self):\n",
     "        current=self.head\n",
     "\n",
@@ -58,9 +93,73 @@
     "my_list.add(20)\n",
     "my_list.add(30)\n",
     "my_list.first(5)\n",
+    "my_list.middle(50)\n",
     "\n",
     "print(\"My Linked List:\")\n",
     "my_list.display()        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87830af7",
+   "metadata": {},
+   "source": [
+    "Double Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2b708128",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 ⇄ 10 ⇄ None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "class DLL:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def add(self, data):\n",
+    "     new_node = Node(data)\n",
+    "\n",
+    "     if self.head is None:\n",
+    "        self.head = new_node\n",
+    "        return\n",
+    "\n",
+    "     current = self.head\n",
+    "     while current.next:\n",
+    "        current = current.next\n",
+    "\n",
+    "     current.next = new_node\n",
+    "     new_node.prev = current\n",
+    "\n",
+    "    def display_forward(self):\n",
+    "      current = self.head\n",
+    "      while current:\n",
+    "        print(current.data, end=\" ⇄ \")\n",
+    "        current = current.next\n",
+    "      print(\"None\")\n",
+    "\n",
+    "\n",
+    "m_list=DLL()\n",
+    "\n",
+    "m_list.add(5)\n",
+    "m_list.add(10)\n",
+    "\n",
+    "m_list.display_forward()"
    ]
   }
  ],
