--- a/code.ipynb
+++ b/code.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "2b708128",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 ⇄ 10 ⇄ None\n"
+      "5 ⇄ 10 ⇄ 15 ⇄ None\n"
      ]
     }
    ],
@@ -158,6 +158,7 @@
     "\n",
     "m_list.add(5)\n",
     "m_list.add(10)\n",
+    "m_list.add(15)\n",
     "\n",
     "m_list.display_forward()"
    ]
