--- a/code.ipynb
+++ b/code.ipynb
@@ -104,7 +104,52 @@
    "id": "2b708128",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "\n",
+    "class DLL:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def add(self, data):\n",
+    "     new_node = Node(data)\n",
+    "\n",
+    "     if self.head is None:\n",
+    "        self.head = new_node\n",
+    "        return\n",
+    "\n",
+    "     current = self.head\n",
+    "     while current.next:\n",
+    "        current = current.next\n",
+    "\n",
+    "     current.next = new_node\n",
+    "     new_node.prev = current\n",
+    "\n",
+    "    def display_forward(self):\n",
+    "      current = self.head\n",
+    "      while current.next:\n",
+    "        current=current.next\n",
+    "        \n",
+    "      while current:\n",
+    "       print(current.data, end=\" ⇄ \")\n",
+    "       current = current.prev\n",
+    "      print(\"None\")\n",
+    "\n",
+    "\n",
+    "m_list=DLL()\n",
+    "\n",
+    "m_list.add(5)\n",
+    "m_list.add(10)\n",
+    "m_list.add(15)\n",
+    "m_list.add(20)\n",
+    "\n",
+    "\n",
+    "m_list.display_forward()"
+   ]
   }
  ],
  "metadata": {
